# cpp-for-numberical-analysis-and-algrithm

Erlang_formulas/: CMakeLists.txt  Erlang.cpp  Erlang.hpp  main.cpp
ch1/: 1-nonlinear_equ_solve.py  2-newton_nonlinear_equ.py  3-gexian.py  4-improve_newton.py  5-sim_newton.py
ch1/useEigen/: CMakeLists.txt  newton_solve_eqs.cpp  sim_newton.cpp
ch2/useEigen/: CMakeLists.txt  gauss_and_gauss_col_remain.cpp
ch4/LS_method/: CMakeLists.txt  main.cpp
ch5/romberg_method/: CMakeLists.txt  main.cpp
dijkstra/: .dijkstra.cpp.swp  CMakeLists.txt  dijkstra.cpp  dijkstra.hpp  main.cpp
